@@ -5,6 +5,9 @@ ChangeLog for wpa_supplicant
 	  configurable with a new command line options (-G<seconds>)
 	* fixed scan buffer processing with WEXT to handle up to 65535
 	  byte result buffer (previously, limited to 32768 bytes)
+	* allow multiple driver wrappers to be specified on command line
+	  (e.g., -Dnl80211,wext); the first one that is able to initialize the
+	  interface will be used
 
 2009-01-06 - v0.6.7
 	* added support for Wi-Fi Protected Setup (WPS)
